# dogecoin

./: .gitignore  .gitmodules  Dockerfile  autogen.sh  configure.ac  libbitcoinconsensus.pc.in
qa/rpc-tests/test_framework/: script.py
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include
src/bench/: verify_script.cpp
src/bls12-381/: .gitignore  Makefile  Makefile.am  configure.ac  libbls.pc.in
src/bls12-381/bench/: CMakeLists.txt  eth_bench.cpp
src/bls12-381/include/bls12-381/: arithmetic.hpp  bls12-381.hpp  fp.hpp  g.hpp  pairing.hpp  scalar.hpp  utils.hpp
src/bls12-381/include/groth16/: groth16.hpp  proof.hpp  serialize.hpp  vkey.hpp
src/bls12-381/include/polyfills/: optional.hpp
src/bls12-381/src/: arithmetic.cpp  config.h.in  fp.cpp  g.cpp  groth16.cpp  pairing.cpp  scalar.cpp  utils.cpp
src/bls12-381/test/: unittests.cpp
src/mcl/: .gitignore  CMakeLists.txt  Makefile.am  configure.ac
src/mcl/include/bls12-381/: fp.hpp  scalar.hpp
src/mcl/include/mcl/: bint.hpp
src/mcl/src/: config.h  pairing.cpp
src/script/: groth16.cpp  groth16.h  interpreter.cpp  interpreter.h  script.cpp  script.h
src/test/: script_tests.cpp
src/test/data/: script_tests.json
